--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -26,6 +26,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .Header {
+        top: 0;
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
 
         .Nav {
@@ -37,6 +38,7 @@
 
 @media screen and (min-width: 1024px){
     .Header {
+        top: 0;
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
 
 
@@ -48,14 +50,14 @@
 }
 
 .Header {
+    position: fixed;
     background-color: $nav;
+    height: 3.5rem;
+    width: 100%;
+    z-index: 2;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
-    flex: 0 0 3.5rem;
-    width: 100%;
-    z-index: 2;
     .Nav {
         height: 100%;
         display: flex;
