--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -5,21 +5,21 @@
 }
 
 @media screen and (max-width: 767px) {
-  .Layout {
-      flex-direction: column-reverse;
+  .Main {
+    padding-bottom: 3.5rem;
   }
 }
 
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .Layout {
-    flex-direction: column;
-}
+  .Main {
+    padding-top: 3.5rem;
+  }
 }
 
 @media screen and (min-width: 1024px){
-  .Layout {
-      flex-direction: column;
+  .Main {
+    padding-top: 3.5rem;
   }
 }
 
@@ -34,7 +34,6 @@
 }
 
 html {
-  font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
