final gatsby changes

--- a/src/common/_colors.scss
+++ b/src/common/_colors.scss
@@ -27,8 +27,9 @@ $new: #1A1A1A;
 $red: #b00e23;
 
 //$bg: #101214;
-$bg: #EDEFF1;
-$nav: #181a1d;
+$bg: #080a0b;
+// $nav: #181a1d;
+$nav: #080a0b;
 $nav-link: #f5f5f5;
 $nav-link-selected: #FC6399;
 $title: #f5f5f5;
