--- a/src/components/Chip/Chip.module.scss
+++ b/src/components/Chip/Chip.module.scss
@@ -1,5 +1,7 @@
 .Chip {
     font-size: 0.875rem;
+    letter-spacing: -0.006em;
+    line-height: 1.25rem;
     color: #3b4351;
     // background-color: rgb(238, 240, 243);
     border-radius: 1rem;
