--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -8,19 +8,19 @@
 }
 
 .Title {
-    margin-bottom: 0.5rem;
-    font-size: 1.5rem;
+    margin: 0;
     color: rgba(0,0,0,.84);
 }
 .Subtitle {
-    margin-bottom: 0.375rem;
+    margin: 0;
+    margin-top: 0.3125rem;
     font-size: 1rem;
     font-weight: 400;
     color: rgba(0, 0, 0, 0.54);
 }
 
 .Section {
-    margin-bottom: 1rem;
+    margin-bottom: 0.625rem;
 
 }
 
